# kata

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: chop.cpp.BDB0492442C135A7.idx  chop.cpp.F8E4554B823D1268.idx  chop.h.16AF81D9A93720D1.idx  chop.h.CECF96CE367B67D4.idx  test_chop.cpp.5C01469FECE2E724.idx  test_chop.cpp.84A40DB938E5764A.idx
src/: CMakeLists.txt  chop.cpp  chop.h  chop.rs  lib.rs
tests/: CMakeLists.txt  optional_printer.h  test_chop.cpp  test_chop.rs
